--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="enter_password">Enter Password</string>
     <string name="login">Patient Login</string>
     <string name="enter_phone_number">Enter Phone Number</string>
-    <string name="drlogin">Doctor Login</string>
+    <string name="drlogin">Login</string>
     <string name="create_account">CREATE ACCOUNT</string>
     <string name="enter_full_name">Enter Name</string>
     <string name="enter_username">Username</string>
